--- a/src/main/webapp/WEB-INF/static/css/style.css
+++ b/src/main/webapp/WEB-INF/static/css/style.css
@@ -7,7 +7,7 @@ button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}
 button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}
 input,select,button{outline:none;}
 table{border-collapse:collapse;border-spacing:0}
-td,th{padding:0}
+td,th{padding:0;text-align:center;}
 img{vertical-align:middle;border:0}
 @-ms-viewport{width:device-width}
 html{font-size:50px;-webkit-tap-highlight-color:transparent;height:100%;min-width:320px;overflow-x:hidden}
@@ -139,7 +139,7 @@ header .rt_nav li .quit_icon:before{content:"Q";}
 .errorTips{color:red;margin:0 8px;}
 .errorTips:before{content:"x";font-family:'adminthemesregular';margin-right:3px;font-size:16px;}
 .textarea{display:inline-block;margin-top:5px;outline:none;resize:none;border:1px #139667 solid;padding:8px;}
-.uploadImg{display:inline-block;padding:15px;background:#f8f8f8;position:relative;border:1px #139667 solid;}
+.uploadImg{display:inline-block;padding:15px;background:#f8f8f8;position:relative;border:1px #139667 solid;cursor: pointer;}
 .uploadImg input{display:none;}
 .uploadImg span{display:block;font-size:12px;text-align:center;color:#139667;}
 .uploadImg span:hover{color:#209f71;}
@@ -159,6 +159,9 @@ header .rt_nav li .quit_icon:before{content:"Q";}
 /*pop*/
 .pop_bg{display:none;background:rgba(0,0,0,.35);width:100%;height:100%;position:fixed;top:0;left:0;z-index:999;}
 .del_pop_bg{display:none;background:rgba(0,0,0,.35);width:100%;height:100%;position:fixed;top:0;left:0;z-index:999;}
+.addvendor_pop_bg{display:none;background:rgba(0,0,0,.35);width:100%;height:100%;position:fixed;top:0;left:0;z-index:999;}
+.addcity_pop_bg{display:none;background:rgba(0,0,0,.35);width:100%;height:100%;position:fixed;top:0;left:0;z-index:999;}
+.addarea_pop_bg{display:none;background:rgba(0,0,0,.35);width:100%;height:100%;position:fixed;top:0;left:0;z-index:999;}
 .pop_cont{background:white;min-width:300px;height:auto;overflow:hidden;position:absolute;top:20%;left:50%;margin-left:-150px;border-radius:5px 5px 0 0;}
 .pop_cont h3{height:40px;line-height:40px;background:#19a97b;color:white;font-size:14px;font-weight:bold;margin:0;padding:0 1em;}
 .pop_cont h3:before{content:"*";font-family:'adminthemesregular';margin-right:2px;font-size:20px;font-weight:normal;}
