--- a/src/main/webapp/WEB-INF/static/css/style.css
+++ b/src/main/webapp/WEB-INF/static/css/style.css
@@ -159,10 +159,11 @@ header .rt_nav li .quit_icon:before{content:"Q";}
 /*pop*/
 .pop_bg{display:none;background:rgba(0,0,0,.35);width:100%;height:100%;position:fixed;top:0;left:0;z-index:999;}
 .del_pop_bg{display:none;background:rgba(0,0,0,.35);width:100%;height:100%;position:fixed;top:0;left:0;z-index:999;}
+.handle_pop_bg{display:none;background:rgba(0,0,0,.35);width:100%;height:100%;position:fixed;top:0;left:0;z-index:999;}
 .addvendor_pop_bg{display:none;background:rgba(0,0,0,.35);width:100%;height:100%;position:fixed;top:0;left:0;z-index:999;}
 .addcity_pop_bg{display:none;background:rgba(0,0,0,.35);width:100%;height:100%;position:fixed;top:0;left:0;z-index:999;}
 .addarea_pop_bg{display:none;background:rgba(0,0,0,.35);width:100%;height:100%;position:fixed;top:0;left:0;z-index:999;}
-.pop_cont{background:white;min-width:300px;height:auto;overflow:hidden;position:absolute;/* top:20%; */left:50%;margin-left:-150px;border-radius:5px 5px 0 0;}
+.pop_cont{background:white;min-width:300px;height:auto;overflow:hidden;position:absolute;top:10%;left:50%;margin-left:-150px;border-radius:5px 5px 0 0;}
 .pop_cont h3{height:40px;line-height:40px;background:#19a97b;color:white;font-size:14px;font-weight:bold;margin:0;padding:0 1em;}
 .pop_cont h3:before{content:"*";font-family:'adminthemesregular';margin-right:2px;font-size:20px;font-weight:normal;}
 .pop_cont .pop_cont_text{padding:10px;line-height:1.3;color:grey;}
