--- a/src/main/webapp/WEB-INF/static/css/style.css
+++ b/src/main/webapp/WEB-INF/static/css/style.css
@@ -174,8 +174,14 @@ header .rt_nav li .quit_icon:before{content:"Q";}
 .pop_cont h3:before{content:"*";font-family:'adminthemesregular';margin-right:2px;font-size:20px;font-weight:normal;}
 .pop_cont .pop_cont_text{padding:10px;line-height:1.3;color:grey;}
 .pop_cont .pop_cont_input{padding:0px;text-align:center;overflow: scroll;width:500px;height:440px;padding:0px}
+
 .pop_cont .small_pop_cont_input{padding:10px;text-align:center}
-/* .pop_cont_input{overflow: scroll;width:500px;height:440px;padding:0px} */
+.pop_cont .small_pop_cont_input li{margin:5px 0;text-align:left;overflow:hidden;}
+.pop_cont .small_pop_cont_input li .ttl{display:inline-block;}
+.pop_cont .small_pop_cont_input li .textbox{border:1px #d2d2d2 solid;width:200px;display:inline-block;}
+.pop_cont .small_pop_cont_input li .select{border:1px #d2d2d2 solid;}
+.pop_cont .small_pop_cont_input li .textarea{border:1px #d2d2d2 solid;}
+
 .pop_cont .pop_cont_input li{margin:5px 0;text-align:left;overflow:hidden;}
 .pop_cont .pop_cont_input li .ttl{display:inline-block;}
 .pop_cont .pop_cont_input li .textbox{border:1px #d2d2d2 solid;width:200px;display:inline-block;}
