--- a/src/main/webapp/WEB-INF/static/css/style.css
+++ b/src/main/webapp/WEB-INF/static/css/style.css
@@ -112,8 +112,8 @@ header .rt_nav li .quit_icon:before{content:"Q";}
 .link_btn:hover{background:#11a274;border:1px #0e8f61 solid;}
 .link_btn:active{background:#0c9c6e;border:1px #0e8f61 solid;}
 .textbox{border:1px #139667 solid;height:26px;line-height:26px;padding:5px;font-size:12px; vertical-align:middle;}
-.textbox_295{width:295px;}
-.textbox_225{width:225px;}
+.textbox_295{width:295px;border:1px #139667 solid;height:26px;line-height:26px;padding:5px;font-size:12px; vertical-align:middle;}
+.textbox_225{width:225px;border:1px #139667 solid;height:26px;line-height:26px;padding:5px;font-size:12px; vertical-align:middle;}
 .select{padding:0 5px;height:38px;font-size:12px;border:1px #139667 solid;vertical-align:middle; appearance: button;-webkit-appearance:button;}
 .group_btn{border:1px #139667 solid;background:#19a97b;color:white;padding:0 15px;height:38px;cursor:pointer;display:inline-block;vertical-align:middle;}
 .group_btn:hover{background:#11a274;border:1px #0e8f61 solid;}
